Fixing account/signup

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1376,10 +1376,10 @@ a.bg-primary:hover {
   background-color: #1a242f;
 }
 .bg-success {
-  background-color: #3bb4db;
+  background-color: #24ec79;
 }
 a.bg-success:hover {
-  background-color: #3498db;
+  background-color: #1eb15c;
 }
 .bg-info {
   background-color: #3498db;
@@ -2359,7 +2359,7 @@ table th[class*="col-"] {
 .table > thead > tr.success > th,
 .table > tbody > tr.success > th,
 .table > tfoot > tr.success > th {
-  background-color: #3bb4db;
+  background-color: #24ec79;
 }
 .table-hover > tbody > tr > td.success:hover,
 .table-hover > tbody > tr > th.success:hover,
@@ -2820,7 +2820,7 @@ select[multiple].form-group-lg .form-control {
 .has-success .input-group-addon {
   color: #ffffff;
   border-color: #ffffff;
-  background-color: #3bb4db;
+  background-color: #24ec79;
 }
 .has-success .form-control-feedback {
   color: #ffffff;
@@ -3129,8 +3129,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: #ffffff;
-  background-color: #3bb4db;
-  border-color: #3bb4db;
+  background-color: #24ec79;
+  border-color: #24ec79;
 }
 .btn-success:hover,
 .btn-success:focus,
@@ -3139,8 +3139,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
   color: #ffffff;
-  background-color: #3085a5;
-  border-color: #11866f;
+  background-color: #32a372;
+  border-color: #32a372;
 }
 .btn-success:active,
 .btn-success.active,
@@ -3165,12 +3165,12 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #3bb4db;
-  border-color: #3bb4db;
+  background-color: #1eb15c;
+  border-color: #1eb15c;
 }
 .btn-success .badge {
-  color: #3bb4db;
-  background-color: #ffffff;
+  color: #1eb15c;
+  background-color: #1eb15c;
 }
 .btn-info {
   color: #ffffff;
